Fixed some weird formatting issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ address {
     color: #0f0f0f; }
   
 body {
-    padding: 50px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
     background-color: #FDDEF3;
     z-index: 0; }
   
